# simulator

./: Cargo.toml  README.md  launch  shell.nix
old/: infos.rs  main.rs  world.rs
src/: app.rs  app_ui.rs  game_referee.rs  gui.rs  infos.rs  main.rs  main_old.rs  objects.rs  player_action.rs  robot.rs  simulator.rs  vector2.rs  vector_converter.rs  vector_improver.rs  world.rs
src/gui/: robot.rs
tests/: 1_passe_l_ecran.py  2_controle_robot_vers_centre.py  3_poursuit_balle.py  4_log_a_l_ecran.py  test1.py  test2.py
