[package]
name = "simulator"
version = "0.1.2"
edition = "2021"

[dependencies]
# eframe = { version = "0.29.1", features = ["glow"] }
# egui = "0.29.1"
# winapi = { version = "0.3.9", features = ["winuser", "windef"] }
rapier2d = "0.22.0"
nalgebra = "0.33.2"
crossbeam = "0.8.4"
rerun = {version = "0.26.0", features = [
  "native_viewer",
  "sdk",
  "server",
]}
mimalloc = "0.1.48"

[dependencies.pyo3]
version = "0.27.0"
features = ["auto-initialize"]
