[package]
name = "simulator"
version = "0.1.3"
edition = "2024"

[dependencies]
rapier2d = "0.22.0"
nalgebra = "0.33.2"
crossbeam = "0.8.4"
rerun = {version = "0.26.0", features = [
  "native_viewer",
  "sdk",
  "server",
]}
mimalloc = "0.1.48"

[dependencies.pyo3]
version = "0.27.0"
features = ["auto-initialize"]
